Update Header-top Section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,47 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>hello world</h1>
+        <!-- Header -->
+        <header>
+            <!-- Header-top -->
+            <div class="container">
+                <div class="header__top">
+                    <!-- Logo -->
+                   <div class="header__left">
+                        <a href="#">
+                            <img 
+                            src="./assets/image/logo.svg" 
+                            alt="MODULARS" 
+                            class="header__logo">
+                        </a>
+                   </div>
+    
+                    <!-- Navbar -->
+                    <div class="header__right">
+                        <nav class="navbar">
+                            <ul class="navbar__list">
+                                <li class="navbar-items">
+                                    <a class="navbar__link active" href="#!">Home</a>
+                                </li>
+                                <li class="navbar-items">
+                                    <a class="navbar__link" href="#!">About</a>
+                                </li>
+                                <li class="navbar-items">
+                                    <a class="navbar__link" href="#!">Blog</a>
+                                </li>
+                                <li class="navbar-items">
+                                    <a class="navbar__link" href="#!">Contact</a>
+                                </li>
+                            </ul>
+                        </nav>
+    
+                        <!-- Button -->
+                        <button class="btn">Sign up</button>
+                    </div>
+                </div>
+        <!-- Hero -->
+        <div class="line"></div>
+            </div>
+        </header>
     </body>
 </html>
